# podcast-chooser

./: .gitignore  .sosrc  LICENSE  default.nix  package.nix  path-io.nix  podcast-chooser.cabal  podcast-chooser.nix  release.nix  shell.nix  stack.yaml  tinc.freeze  tinc.nix
nix/: path-io.nix  podcast-chooser.nix  vty-menu.nix
src/: Main.hs  Podcasts.hs
