name:                podcast-chooser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/podcast-chooser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable podcast-chooser
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , byline
                     , lens-aeson
                     , lens
                     , aeson
                     , text
                     , bytestring
                     , turtle
                     , foldl
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/podcast-chooser
